demko/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  labels:
    istio-injection: enabled
  name: demko
spec: {}
status: {}
