demko/ddeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ng-deploy
  name: ng-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      app: ng-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ng-app
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
