demko/demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ng-service
    app.kubernetes.io/instance: demko
  name: ng-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: ng-app
status:
  loadBalancer: {}
