demko/d-ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: d-ingress
  namespace: default
spec:
  rules:
  - host: web.cx.one.pl
    http:
      paths:
      - backend:
          service:
            name: ng-service
            port:
              number: 8080
        path: /
        pathType: Exact
status:
  loadBalancer: {}
