demko/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2022-09-27T23:00:20Z"
  generation: 1
  name: demko-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: web.cx.one.pl
    http:
      paths:
      - backend:
          service: ng-service
            name: 
            port:
              number: 8080
        path: /
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - ip: 10.241.118.102
